# youtube-summarizer-cloud-run

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  build_n_deploy.sh  enable_oauth_for_cloud_run.sh  pyproject.toml
youtube_summarizer_cloud_run/: fast_api_backend.py  streamlit_frontend.py
