[project]
name = "youtube-summarizer-cloud-run"
version = "0.1.0"
description = "Tutorial on developing a Flask application to summarize YouTube videos with Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "google-genai>=1.2.0",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]

